# battleship_project

battleship/: .gitignore  CMakeLists.txt  README.md
battleship/src/application/: BoundedHistory.h  CollectionUtils.h  FleetPlan.cpp  FleetPlan.h  Generator.h  Match.cpp  Match.h  MatchRepository.h  RandomGenerator.h
battleship/src/console/: main.cpp
battleship/src/domain/: AiPlayer.cpp  AiPlayer.h  AiStrategy.cpp  AiStrategy.h  Board.cpp  Board.h  Types.cpp  Types.h
battleship/src/infrastructure/: FileMatchRepository.cpp  FileMatchRepository.h  MatchFactory.cpp  MatchFactory.h  StdRandomGenerator.cpp  StdRandomGenerator.h
battleship/src/ui/: main.mm
battleship/tests/: domain_tests.cpp
